[gd_scene load_steps=7 format=2]

[ext_resource path="res://HUD/HUDGemIndicator.gd" type="Script" id=1]
[ext_resource path="res://art/platformerPack/Items/gemRed.png" type="Texture" id=2]
[ext_resource path="res://art/platformerPack/Items/gemGreen.png" type="Texture" id=3]
[ext_resource path="res://art/platformerPack/Items/gemBlue.png" type="Texture" id=4]
[ext_resource path="res://art/platformerPack/Items/gemYellow.png" type="Texture" id=5]

[sub_resource type="CanvasItemMaterial" id=1]

[node name="GemIndicator" type="Control"]
margin_right = 610.0
margin_bottom = 160.0
rect_min_size = Vector2( 20, 160 )
script = ExtResource( 1 )

[node name="hbox" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -598.0
margin_bottom = -160.0
custom_constants/separation = 0
alignment = 1

[node name="RedRect" type="ColorRect" parent="hbox"]
margin_right = 150.0
margin_bottom = 150.0
rect_min_size = Vector2( 150, 150 )
color = Color( 0.0666667, 0.0666667, 0.0666667, 1 )

[node name="Red" type="TextureRect" parent="hbox/RedRect"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 150, 150 )
size_flags_horizontal = 7
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="GreenRect" type="ColorRect" parent="hbox"]
margin_left = 150.0
margin_right = 300.0
margin_bottom = 150.0
rect_min_size = Vector2( 150, 150 )
color = Color( 0.0666667, 0.0666667, 0.0666667, 1 )

[node name="Green" type="TextureRect" parent="hbox/GreenRect"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 150, 150 )
size_flags_horizontal = 7
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="BlueRect" type="ColorRect" parent="hbox"]
margin_left = 300.0
margin_right = 450.0
margin_bottom = 150.0
rect_min_size = Vector2( 150, 150 )
color = Color( 0.0666667, 0.0666667, 0.0666667, 1 )

[node name="Blue" type="TextureRect" parent="hbox/BlueRect"]
modulate = Color( 1, 1, 1, 0.105882 )
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 150, 150 )
size_flags_horizontal = 7
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="YellowRect" type="ColorRect" parent="hbox"]
margin_left = 450.0
margin_right = 600.0
margin_bottom = 150.0
rect_min_size = Vector2( 150, 150 )
color = Color( 0.0666667, 0.0666667, 0.0666667, 1 )

[node name="Yellow" type="TextureRect" parent="hbox/YellowRect"]
material = SubResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 150, 150 )
size_flags_horizontal = 7
texture = ExtResource( 5 )
expand = true
stretch_mode = 6

